# linear-regression

./: README.MD  pyproject.toml  regression.ipynb
