[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["abdu-zeyad <abd.d@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.0.3"
matplotlip = "^0.2"
pandas = "^1.3.1"
sklearn = "^0.0"
seaborn = "^0.11.1"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
